# SimulatorOfAlgorithm

./: README.md
Backend - project/Algorytmy/: CMakeLists.txt  FCFS.cpp  FCFS.h  HRRN.cpp  HRRN.h  Processes.cpp  Processes.h  RR.cpp  RR.h  SJF.cpp  SJF.h  SaveAndLoad.cpp  SaveAndLoad.h  main.cpp
Frontend - project/Simulator/: Form1.Designer.cs  Form1.aa.resx  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Form2.resx  Form3.Designer.cs  Form3.cs  ReadData.cs  SaveData.cs  Simulator.csproj  Simulator.sln
Frontend - project/Simulator/Properties/: AssemblyInfo.cs  Settings.Designer.cs
